--- a/1807.html
+++ b/1807.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
 		<link rel="stylesheet" href="./1807.css">
-        <title>raygothat.github.io/raygothat/</title>
+        <title>raygothat.github.io-raygothat/</title>
     </head>
     
     <body> 
